feat: add logging mongodb with kafka message queue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,4 @@
-# run mysql
-# docker run --name assign-mysql -p 3306:3306 --platform linux/x86_64 -e MYSQL_ROOT_PASSWORD=root -d mysql:latest
-# CREATE DATABASE db_books;
-# CREATE USER 'kientd'@'172.17.0.1' IDENTIFIED BY '123456';
-# GRANT ALL PRIVILEGES ON *.* TO 'kientd'@'172.17.0.1';
-
-# run redis
-# docker run -d --name redis-stack-server -p 6379:6379 redis/redis-stack-server:latest
-
-# database configuration
+# mysql configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/db_books?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=kientd
@@ -21,6 +12,19 @@ spring.jpa.hibernate.ddl-auto = update
 spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# mongodb configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=db_logs
+spring.data.mongodb.username=kientd
+spring.data.mongodb.password=123456
+
+# kafka configuration
+kafka.bootstrap-servers=localhost:29092
+kafka.consumer.group-id=myGroup
+kafka.message.topic.name=logger
 
 # swagger
 springdoc.api-docs.path=/api-docs
